cleanup saml custom auth response converter